samples/_failures_safe/1761287407_dd9bf2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe71148f.c: In function ‘main’:
./samples/SAFE/__tmp_fe71148f.c:155:9: error: expected declaration or statement at end of input
  155 |         }
      |         ^
./samples/SAFE/__tmp_fe71148f.c:155:9: error: expected declaration or statement at end of input
